[package]
name = "ledswarm_protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
accelerometer = "0.12.0"
bincode = "1.3.3"
chrono = "0.4.31"
nanoid = "0.4.0"
serde = "1.0.195"
serde_derive = "1.0.195"
serde_json = "1.0.111"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
